# Predictor

./: CMakeLists.txt
Predictor/Data/: Em.cvs  In.cvs  Out.cvs
Predictor/src/: Predictor.cpp  Predictor.h  main.cpp
